--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,26 +16,17 @@ dependencies = [
     "jupyterlab>=4.0.0",
 ]
 authors = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "Dmytro Lytvynenko", email = "litv1n.true@gmail.com"},
 ]
 classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
 ]
 
 [project.optional-dependencies]
 dev = [
     "black>=22.0.0",
     "isort>=5.0.0",
-    "pytest>=7.0.0",
-    "pytest-cov>=4.0.0",
-    "mypy>=1.0.0",
 ]
 
 [project.scripts]
@@ -59,19 +50,4 @@ multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
-ensure_newline_before_comments = true
-
-[tool.mypy]
-python_version = "3.9"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-warn_unreachable = true
-strict_equality = true 
+ensure_newline_before_comments = true 
